# cdb-transformer

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: native.yaml
src/: card.rs  constants.rs  lib.rs  main.rs  transformers.rs
src/transformers/: cdb.rs  cdb_wasm.rs  script.rs  sql.rs  xyyz.rs
src/transformers/test_data/: strings.conf  test.sql  xyyz.txt  xyyz_weak.txt
