[package]
name = "cdb-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
clap = { version = "4", features = ["derive"] }
phf = { version = "0", features = ["macros"]}
regex = "1.10.3"
sqlite = "0"
