[package]
name = "cdb-transformer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
phf = { version = "0", features = ["macros", "serde"] }
serde = { version = "1", features = ["derive"] }
arc-swap = { version = "1", features = ["serde"] }
regex = "1"
wild = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlite = "0" 

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = 'z'
